--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -13,6 +13,7 @@ legacy_version_file = true
 plugin_autoupdate_last_check_duration = '1 week'
 trusted_config_paths = [
   '~/.config',
+  '~/.dotfiles',
   '~/projects/'
 ]
 
