--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
   defaultBranch = main
 [core]
   editor = nvim
+  pager = delta
 [pull]
   ff = only
   default = current
@@ -14,3 +15,10 @@
   ui = auto
 [fetch]
   prune = true
+[interactive]
+  diffFilter = delta --color-only
+[delta]
+  navigate = true
+  dark = true
+[merge]
+  conflictStyle = zdiff3
