--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,17 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set-option -s escape-time 11
+
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 set -gq allow-passthrough on
+
+set -s escape-time 0
+
+set -g status-interval 5
+
+set-window-option -gq -g aggressive-resize on
 
 unbind-key C-b
 set -g prefix C-s
@@ -28,6 +36,11 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 bind-key x kill-pane
 
