tmux: update tmux status line and border colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,11 +72,13 @@ set-option -g @thm_red red
 set-option -g @thm_green green
 set-option -g @thm_cyan cyan
 
-# Variables
-session_fg="#{?client_prefix,#{@thm_bg},#{@thm_cyan}}"
-session_bg="#{?client_prefix,#{@thm_red},#{@thm_bg}}"
+set -g pane-border-style fg=cyan
+set -g pane-active-border-style fg=cyan
 
-battery_fg="#{?#{e|>=:10,#{battery_percentage}},#{@thm_red},#{@thm_green}}"
+# Variables
+session_fg="#{?client_prefix,magenta,#{@thm_cyan}}"
+
+battery_fg="#{?#{e|>=:10,#{battery_percentage}},#{@thm_red},magenta}"
 
 network_online="#{?#{==:#{online_status},ok}}"
 
@@ -84,34 +86,34 @@ network_online="#{?#{==:#{online_status},ok}}"
 # Left side
 set -g status-left-length 100
 set -g status-left ""
-set -ga status-left "#[bg=${session_bg},fg=${session_fg}]  #S "
-set -ga status-left "#[bg=#{@thm_no_bg}] "
-set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_cyan}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=#{@thm_no_bg},fg=${session_fg}]  #S "
+set -ga status-left "#[bg=#{@thm_no_bg},fg=#{@thm_cyan}]|"
+set -ga status-left "#[bg=#{@thm_no_bg},fg=#{@thm_cyan}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
 
 # Right side
 set -g status-right-length 100
 set -g status-right ""
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_cyan}] 󰅐 %l:%M "
-set -ga status-right "#[bg=#{@thm_no_bg}] "
-set -ga status-right "#[bg=#{@thm_bg},fg=${battery_fg}] #{battery_icon} #{battery_percentage} "
-set -ga status-right "#[bg=#{@thm_no_bg}] "
-set -ga status-right "#[bg=#{@thm_bg}]#{?network_online,#[fg=#{@thm_green}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
+set -ga status-right "#[bg=#{@thm_no_bg},fg=magenta] 󰅐 %l:%M "
+set -ga status-right "#[bg=#{@thm_no_bg},fg=magenta]|"
+set -ga status-right "#[bg=#{@thm_no_bg},fg=${battery_fg}] #{battery_icon} #{battery_percentage} "
+set -ga status-right "#[bg=#{@thm_no_bg},fg=magenta]|"
+set -ga status-right "#[bg=#{@thm_no_bg}]#{?network_online,#[fg=magenta] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
 
 # General status bar styles
-set -g status-position bottom
+set -g status-position bottom 
 set -ga status-style "bg=#{@thm_no_bg},fg=#{@thm_green}"
 set -g status-justify "absolute-centre"
 
 # Window options
 set -g window-status-format ""
 
-set -g window-status-style "bg=#{@thm_no_bg},fg=#{@thm_bg}"
+set -g window-status-style "bg=#{@thm_no_bg},fg=magenta"
 set -g window-status-bell-style "bg=#{@thm_no_bg},fg=#{@thm_red}"
 set -g window-status-activity-style "bg=#{@thm_no_bg},fg=#{@thm_red}"
 set -gF window-status-separator "#[bg=#{@thm_no_bg}] "
 
 set -g window-status-current-format ""
-set -g window-status-current-style "bg=#{@thm_no_bg},fg=#{@thm_cyan}"
+set -g window-status-current-style "bg=#{@thm_no_bg},fg=magenta"
 
 set -g message-style "bg=#{@thm_bg},fg=#{@thm_cyan}"
 
