--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -1,2 +1,9 @@
 [mgr]
-show_hidden=true
+show_hidden    = true
+sort_dir_first = true
+
+[preview]
+max_width = 1200
+max_height = 1000
+tab_size = 2
+cache_dir = ""
