move tmux status-bar to top

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -100,7 +100,7 @@ set -ga status-right "#[bg=#{@thm_no_bg},fg=magenta]|"
 set -ga status-right "#[bg=#{@thm_no_bg}]#{?network_online,#[fg=magenta] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
 
 # General status bar styles
-set -g status-position bottom 
+set -g status-position top
 set -ga status-style "bg=#{@thm_no_bg},fg=#{@thm_green}"
 set -g status-justify "absolute-centre"
 
